# rtfm-app

./: .travis.yml  Cargo.toml  readme.md
.cargo/: config
examples/: #sm.rs#  blink.rs  blinky.rs  button.rs  event-queue.rs  fn-common.rs  fsm.rs  one-resource-expand.rs  one-resource.rs  pn.rs  serial-dma.rs  serial.rs  simple-expand.rs  simple.rs  sm-hvac.rs  sm-led.rs  sm.rs  tw-simple.rs  usart-rx.rs  without-rtfm.rs
src/: main.rs
