[package]
name = "rtfm-app"
version = "0.2.0"
description = "RFTM - v0.4beta"
authors = ["Cecília Carneiro <cecilia.carneiroesilva@gmail.com>"]


[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = { version = "0.6.5", features = ["device"] }
cortex-m-rtfm = "0.4.0-beta.2"
cortex-m-semihosting = "0.3.1"
narc-hal = { path = "../quickstart/narc_rust/hal", version = "0.1.5" }
heapless = { version = "0.4.0", features = ["const-fn"] }
nb = "0.1.1"

[dependencies.embedded-hal]
version = "0.2.1"
