[package]
name = "rtfm-app"
version = "0.2.1"
description = "RFTM - v0.4beta.3"
authors = ["Cecília Carneiro <cecilia.carneiroesilva@gmail.com>"]


[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = { version = "0.6.5", features = ["device"] }
cortex-m-rtfm = { version = "0.4.0-beta.3", features = ["timer-queue"] }
cortex-m-semihosting = "0.3.1"
narc-hal = { path = "../quickstart/narc_rust/hal", version = "0.1.8" }
heapless = { version = "0.4.0", features = ["const-fn"] }
nb = "0.1.1"

[dependencies.embedded-hal]
version = "0.2.1"
